crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_diff_view_collapsed_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 7 files · 8 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │Cargo.lock  A  +3 −0                   [A accept file] [U restore file]│"
"│  main · 4 files          │collapsed (glob) · +3 −0                                     [e expand]│"
"│  A Cargo.lock ⊟  +3 −0   │                                                                       │"
"│  M f1  +1 −1             │                                                                       │"
"│  M f2  +1 −0             │                                                                       │"
"│  M parse.rs  +10 −2      │                                                                       │"
"│──────────────────────────│                                                                       │"
"│beta                      │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  a/A accept file  ^A accept all  t hide empty  Tab focus  ? help  q quit          "
