crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_diff_view_hunks_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 4 files · 6 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │f1  M  +3 −3                           [A accept file] [U restore file]│"
"│  main · 1 file           │@@ -42,7 +42,7 @@                       [a accept] [u restore] [m flag]│"
"│  M f1  +3 −3             │ line 42                                                               │"
"│──────────────────────────│ line 43                                                               │"
"│beta                      │ line 44                                                               │"
"│  main · 2 files          │-line 45                                                               │"
"│  A u1  +1 −0  [upstream] │+LINE 45 (edited)                                                      │"
"│  A u2  +2 −0  [mixed]    │ line 46                                                               │"
"│  [upstream] 1 file       │ line 47                                                               │"
"│──────────────────────────│ line 48                                                               │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │@@ -75,6 +75,6 @@                       [a accept] [u restore] [m flag]│"
"│  M n2.md  +2 −0          │ line 75                                                               │"
"│                          │ line 76                                                               │"
"│                          │ line 77                                                               │"
"│                          │-line 78                                                               │"
"│                          │+LINE 78 (edited)                                                      │"
"│                          │ line 79                                                               │"
"│                          │ line 80                                                               │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a accept hunk  A accept file  z undo  t hide empty  ? help  q quit     "
