crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_diff_view_mode_change_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 7 files · 9 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │f3  X  +1 −1                           [A accept file] [U restore file]│"
"│  main · 4 files          │mode 100644 → 100755                    [a accept] [u restore] [m flag]│"
"│  M f1  +1 −1             │                                                                       │"
"│  M f2  +1 −0             │                                                                       │"
"│  X f3  +1 −1             │                                                                       │"
"│  M parse.rs  +10 −2      │                                                                       │"
"│──────────────────────────│                                                                       │"
"│beta                      │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a accept hunk  A accept file  t hide empty  ? help  q quit             "
