crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_diff_view_rename_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 5 files · 5 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │d/new.rs  A  +10 −0  (renamed from d/old.rs 90%)        [A accept file]│"
"│  main · 2 files          │@@ -0,0 +1,10 @@                        [a accept] [u restore] [m flag]│"
"│  A new.rs  +10 −0        │+l1                                                                    │"
"│  D old.rs  +0 −10        │+L2                                                                    │"
"│──────────────────────────│+l3                                                                    │"
"│beta                      │+l4                                                                    │"
"│  main · 2 files          │+l5                                                                    │"
"│  A u1  +1 −0  [upstream] │+l6                                                                    │"
"│  A u2  +2 −0  [mixed]    │+l7                                                                    │"
"│  [upstream] 1 file       │+l8                                                                    │"
"│──────────────────────────│+l9                                                                    │"
"│W/notes                   │+l10                                                                   │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a accept hunk  A accept file  z undo  t hide empty  ? help  q quit     "
